--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "vue-resource": "^1.0.3"
   },
   "dependencies": {
-    "moment": "^2.17.1"
+    "firebase": "^3.6.2",
+    "moment": "^2.17.1",
+    "vuefire": "^1.3.0"
   }
 }
