change creature seeder and improvements to battle system

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
         "laravel/socialite": "^2.0",
-        "timongorpg/creatures": "^0.0.1"
+        "timongorpg/creatures": "*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -39,11 +39,13 @@
         ],
         "post-install-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postInstall",
-            "php artisan optimize"
+            "php artisan optimize",
+            "cp -R vendor/timongorpg/creatures/img/*.gif public/img/creatures"
         ],
         "post-update-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
-            "php artisan optimize"
+            "php artisan optimize",
+            "cp -R vendor/timongorpg/creatures/img/*.gif public/img/creatures"
         ]
     },
     "config": {
