--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,30 @@
-version: "2"
+version: '2'
 services:
-  web:
-    build: .
-    ports:
-        - "80:8080"
-    volumes:
-        - .:/code
+    web:
+        build:
+            context: ./
+            dockerfile: web.docker
+        volumes:
+            - ./:/var/www
+        ports:
+            - "80:80"
+        links:
+            - app
+    app:
+        build:
+            context: ./
+            dockerfile: app.docker
+        volumes:
+            - ./:/var/www
+        links:
+            - database
+        environment:
+            - "DB_PORT=3306"
+            - "DB_HOST=database"
+    database:
+        image: mysql:5.6
+        environment:
+            - "MYSQL_ROOT_PASSWORD=secret"
+            - "MYSQL_DATABASE=timongo"
+        ports:
+            - "33061:3306"
