--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
         "laravel/socialite": "^2.0",
-        "timongorpg/creatures": "*"
+        "timongorpg/creatures": "0.2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
