--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.7",
         "symfony/css-selector": "3.1.*",
-        "symfony/dom-crawler": "3.1.*"
+        "symfony/dom-crawler": "3.1.*",
+        "sofa/laravel-kahlan": "~5.4"
     },
     "autoload": {
         "classmap": [
