--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "dependencies": {
     "animate.css": "^3.5.2",
     "firebase": "^3.6.2",
+    "laravel-echo": "^1.3.0",
     "malihu-custom-scrollbar-plugin": "^3.1.5",
     "moment": "^2.17.1",
+    "toastr": "^2.1.2",
     "vuefire": "^1.3.0"
   }
 }
