add unit tests, add restriction for max level
fix code style on TestCase class removing blank line

add new blank line to UserTest

--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,8 @@
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
             "php artisan optimize",
             "cp -R vendor/timongorpg/creatures/img/*.gif public/img/creatures"
-        ]
+        ],
+        "test": "vendor/bin/phpunit"
     },
     "config": {
         "preferred-install": "dist"
