--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "animate.css": "^3.5.2",
     "firebase": "^3.6.2",
+    "font-awesome": "^4.7.0",
     "laravel-echo": "^1.3.0",
     "malihu-custom-scrollbar-plugin": "^3.1.5",
     "moment": "^2.17.1",
